// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`sliderField > should render correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_mxir930 uv_mxir932d uv_mxir933p"
        data-options="false"
      >
        <div
          class="uv_mxir930 uv_mxir932d uv_mxir933p uv_mxir936v"
        >
          <div
            class="uv_mxir930 uv_mxir932j uv_mxir936p"
          >
            <span
              class="uv_12tz9gce uv_12tz9gcf uv_12tz9gch uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8k uv_1yhcak81a uv_1yhcak832"
              data-testid="slider-value"
              style="--uv_1eu8od80: right;"
            >
              0
            </span>
          </div>
          <div
            class="uv_mxir930 uv_mxir932d uv_mxir933p uv_mxir9361"
            style="--uv_1o893js0: 100%;"
          >
            <input
              aria-label="test"
              class="uv_12tz9gcl uv_12tz9gcm uv_12tz9gcb uv_12tz9gcc"
              data-direction="column"
              data-error="false"
              id="_r_1_"
              max="100"
              min="0"
              name="test"
              step="1"
              style="--uv_12tz9gc2: calc(0% - 0px); --uv_12tz9gc1: #ffffff; background-size: 0% 100%;"
              tabindex="0"
              type="range"
              value="0"
            />
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`sliderField > should render correctly disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        aria-label="Slider Input"
        class="uv_mxir930 uv_mxir932d uv_mxir933p"
        data-options="false"
      >
        <div
          class="uv_mxir930 uv_mxir932d uv_mxir933p uv_mxir936v"
        >
          <div
            class="uv_mxir930 uv_mxir932j uv_mxir936p"
          >
            <span
              class="uv_12tz9gce uv_12tz9gcf uv_12tz9gch uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8k uv_1yhcak81a uv_1yhcak832"
              data-testid="slider-value"
              style="--uv_1eu8od80: right;"
            >
              0
            </span>
          </div>
          <div
            class="uv_mxir930 uv_mxir932d uv_mxir933p uv_mxir9361"
            style="--uv_1o893js0: 100%;"
          >
            <input
              aria-disabled="true"
              aria-label="Slider Input"
              class="uv_12tz9gcl uv_12tz9gcm uv_12tz9gcp uv_12tz9gcb uv_12tz9gcd"
              data-direction="column"
              data-error="false"
              disabled=""
              id="_r_1l_"
              max="100"
              min="0"
              name="test"
              step="1"
              style="--uv_12tz9gc2: calc(0% - 0px); --uv_12tz9gc1: #ffffff; background-size: 0% 100%;"
              tabindex="0"
              type="range"
              value="0"
            />
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`sliderField > should render correctly with possible values 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_mxir930 uv_mxir932d uv_mxir9341"
        data-options="true"
      >
        <div
          class="uv_mxir930 uv_mxir932d uv_mxir933p uv_mxir936v"
        >
          <div
            class="uv_mxir930 uv_mxir932j uv_mxir936p"
          >
            <span
              class="uv_12tz9gce uv_12tz9gcf uv_12tz9gch uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8k uv_1yhcak81a uv_1yhcak832"
              data-testid="slider-value"
              style="--uv_1eu8od80: right;"
            >
              1
            </span>
          </div>
          <div
            class="uv_mxir930 uv_mxir932d uv_mxir933p uv_mxir9361"
            style="--uv_1o893js0: 100%;"
          >
            <input
              aria-label="test"
              class="uv_12tz9gcl uv_12tz9gcm uv_12tz9gcb uv_12tz9gcc"
              data-direction="column"
              data-error="false"
              id="_r_7_"
              max="6"
              min="0"
              name="test"
              step="1"
              style="--uv_12tz9gc2: calc(0% - 0px); --uv_12tz9gc1: #ffffff; background-size: 0% 100%;"
              tabindex="0"
              type="range"
              value="0"
            />
            <datalist
              class="uv_12tz9gc6"
              data-double="false"
            >
              <span
                class="uv_12tz9gc8 uv_12tz9gc9"
                data-element-left="true"
                data-element-right="false"
                data-value="0"
                style="--uv_12tz9gc3: calc(0% - 0px + 8px);"
              >
                <p
                  class="uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8p uv_1yhcak81a uv_1yhcak832"
                >
                  1Mb
                </p>
              </span>
              <span
                class="uv_12tz9gc8"
                data-element-left="false"
                data-element-right="false"
                data-value="1"
                style="--uv_12tz9gc3: calc(16.666666666666668% - 2.666666666666667px + 8px);"
              >
                <p
                  class="uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8p uv_1yhcak81a uv_1yhcak832"
                >
                  3Mb
                </p>
              </span>
              <span
                class="uv_12tz9gc8"
                data-element-left="false"
                data-element-right="false"
                data-value="2"
                style="--uv_12tz9gc3: calc(33.333333333333336% - 5.333333333333334px + 8px);"
              >
                <p
                  class="uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8p uv_1yhcak81a uv_1yhcak832"
                >
                  5Mb
                </p>
              </span>
              <span
                class="uv_12tz9gc8"
                data-element-left="false"
                data-element-right="false"
                data-value="3"
                style="--uv_12tz9gc3: calc(50% - 8px + 8px);"
              >
                <p
                  class="uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8p uv_1yhcak81a uv_1yhcak832"
                >
                  10Mb
                </p>
              </span>
              <span
                class="uv_12tz9gc8"
                data-element-left="false"
                data-element-right="false"
                data-value="4"
                style="--uv_12tz9gc3: calc(66.66666666666667% - 10.666666666666668px + 8px);"
              >
                <p
                  class="uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8p uv_1yhcak81a uv_1yhcak832"
                >
                  50Mb
                </p>
              </span>
              <span
                class="uv_12tz9gc8"
                data-element-left="false"
                data-element-right="false"
                data-value="5"
                style="--uv_12tz9gc3: calc(83.33333333333333% - 13.333333333333332px + 8px);"
              >
                <p
                  class="uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8p uv_1yhcak81a uv_1yhcak832"
                >
                  100Mb
                </p>
              </span>
              <span
                class="uv_12tz9gc8 uv_12tz9gca"
                data-element-left="false"
                data-element-right="true"
                data-value="6"
                style="--uv_12tz9gc3: calc(100% - 16px + 8px);"
              >
                <p
                  class="uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8p uv_1yhcak81a uv_1yhcak832"
                >
                  500Mb
                </p>
              </span>
            </datalist>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`sliderField > should render correctly with possible values and double 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_12tz9gc4 uv_mxir930 uv_mxir932d uv_mxir9341"
        data-double="true"
        data-options="true"
      >
        <div
          class="uv_mxir930 uv_mxir932d uv_mxir933p uv_mxir936v"
        >
          <div
            class="uv_mxir930 uv_mxir932d uv_mxir933p"
            style="--uv_1o893js0: 100%;"
          >
            <div
              class="uv_mxir930 uv_mxir932j uv_mxir9377"
            >
              <span
                class="uv_12tz9gce uv_12tz9gcg uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8k uv_1yhcak81a uv_1yhcak832"
                data-testid="value-left"
                style="--uv_1eu8od80: right;"
              >
                1
              </span>
              <span
                class="uv_12tz9gce uv_12tz9gcg uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8k uv_1yhcak81a uv_1yhcak832"
                data-testid="value-right"
                style="--uv_1eu8od80: right;"
              >
                500
              </span>
            </div>
            <div
              class="uv_12tz9gcr"
            >
              <div
                class="uv_12tz9gcs"
              >
                <div
                  aria-disabled="false"
                  class="uv_12tz9gct"
                  data-error="false"
                  style="left: 0%; right: 0%;"
                />
              </div>
              <input
                aria-label="test"
                class="uv_12tz9gci uv_12tz9gcj uv_12tz9gcb uv_12tz9gcc"
                data-direction="column"
                data-testid="handle-left"
                id="_r_r_"
                max="6"
                min="0"
                name="test"
                step="1"
                style="--uv_12tz9gc2: calc(0% - 0px); --uv_12tz9gc1: #ffffff;"
                type="range"
                value="0"
              />
              <input
                aria-label="test"
                class="uv_12tz9gci uv_12tz9gcj uv_12tz9gcb uv_12tz9gcc"
                data-direction="column"
                data-testid="handle-right"
                id="_r_r_"
                max="6"
                min="0"
                name="test"
                step="1"
                style="--uv_12tz9gc2: calc(100% - 16px); --uv_12tz9gc1: #ffffff;"
                type="range"
                value="6"
              />
              <datalist
                class="uv_12tz9gc6 uv_12tz9gc7"
                data-double="true"
              >
                <span
                  class="uv_12tz9gc8 uv_12tz9gc9"
                  data-element-left="true"
                  data-element-right="false"
                  data-value="0"
                  style="--uv_12tz9gc3: calc(0% - 0px + 8px);"
                >
                  <p
                    class="uv_1yhcak80 uv_1yhcak84 uv_1yhcak8c uv_1yhcak8t uv_1yhcak81a uv_1yhcak82e"
                  >
                    1Mb
                  </p>
                </span>
                <span
                  class="uv_12tz9gc8"
                  data-element-left="false"
                  data-element-right="false"
                  data-value="1"
                  style="--uv_12tz9gc3: calc(16.666666666666668% - 2.666666666666667px + 8px);"
                >
                  <p
                    class="uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8p uv_1yhcak81a uv_1yhcak832"
                  >
                    3Mb
                  </p>
                </span>
                <span
                  class="uv_12tz9gc8"
                  data-element-left="false"
                  data-element-right="false"
                  data-value="2"
                  style="--uv_12tz9gc3: calc(33.333333333333336% - 5.333333333333334px + 8px);"
                >
                  <p
                    class="uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8p uv_1yhcak81a uv_1yhcak832"
                  >
                    5Mb
                  </p>
                </span>
                <span
                  class="uv_12tz9gc8"
                  data-element-left="false"
                  data-element-right="false"
                  data-value="3"
                  style="--uv_12tz9gc3: calc(50% - 8px + 8px);"
                >
                  <p
                    class="uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8p uv_1yhcak81a uv_1yhcak832"
                  >
                    10Mb
                  </p>
                </span>
                <span
                  class="uv_12tz9gc8"
                  data-element-left="false"
                  data-element-right="false"
                  data-value="4"
                  style="--uv_12tz9gc3: calc(66.66666666666667% - 10.666666666666668px + 8px);"
                >
                  <p
                    class="uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8p uv_1yhcak81a uv_1yhcak832"
                  >
                    50Mb
                  </p>
                </span>
                <span
                  class="uv_12tz9gc8"
                  data-element-left="false"
                  data-element-right="false"
                  data-value="5"
                  style="--uv_12tz9gc3: calc(83.33333333333333% - 13.333333333333332px + 8px);"
                >
                  <p
                    class="uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8p uv_1yhcak81a uv_1yhcak832"
                  >
                    100Mb
                  </p>
                </span>
                <span
                  class="uv_12tz9gc8 uv_12tz9gca"
                  data-element-left="false"
                  data-element-right="true"
                  data-value="6"
                  style="--uv_12tz9gc3: calc(100% - 16px + 8px);"
                >
                  <p
                    class="uv_1yhcak80 uv_1yhcak84 uv_1yhcak8c uv_1yhcak8t uv_1yhcak81a uv_1yhcak82e"
                  >
                    500Mb
                  </p>
                </span>
              </datalist>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`sliderField > should trigger events correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_mxir930 uv_mxir932d uv_mxir933p"
        data-options="false"
      >
        <div
          class="uv_mxir930 uv_mxir932d uv_mxir933p uv_mxir936v"
        >
          <div
            class="uv_mxir930 uv_mxir93d uv_mxir932j uv_mxir9377"
          >
            <div
              class="uv_mxir930 uv_mxir93v uv_mxir932j uv_mxir935j"
            >
              <label
                class="uv_f32sl2 uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8n uv_1yhcak81a uv_1yhcak832"
                for="_r_1r_"
              >
                Test
              </label>
              <span
                class="uv_1yhcak80 uv_1yhcak84 uv_1yhcak89 uv_1yhcak8n uv_1yhcak81a uv_1yhcak82m"
              >
                *
              </span>
            </div>
            <div
              class="uv_12tz9gcw uv_mxir930 uv_mxir932d uv_mxir935j"
            >
              <div>
                <div
                  class="uv_1p4qkknk uv_1p4qkknn uv_1p4qkkno"
                  data-controls="false"
                  data-disabled="false"
                  data-error="false"
                  data-size="small"
                  data-success="false"
                  data-unit="false"
                >
                  <div
                    class="uv_1p4qkkn3 uv_1p4qkkn4 uv_78oem50 uv_78oem5d uv_78oem561"
                    style="--uv_ivy5ld0: 1fr auto; --uv_ivy5ld1: 1fr auto; --uv_ivy5ld2: 1fr auto; --uv_ivy5ld3: 1fr auto; --uv_ivy5ld4: 1fr auto; --uv_ivy5ld5: 1fr auto;"
                  >
                    <input
                      aria-label="input"
                      class="uv_1p4qkknc uv_1p4qkknd uv_1p4qkkni uv_1p4qkknj"
                      data-testid="slider-input"
                      id="_r_20_"
                      inputmode="numeric"
                      max="10"
                      min="0"
                      placeholder=""
                      step="1"
                      type="number"
                      value="0"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="uv_mxir930 uv_mxir932j uv_mxir936p"
          />
          <div
            class="uv_mxir930 uv_mxir932d uv_mxir933p uv_mxir9361"
            style="--uv_1o893js0: 100%;"
          >
            <input
              aria-label="test"
              class="uv_12tz9gcl uv_12tz9gcm uv_12tz9gcb uv_12tz9gcc"
              data-direction="column"
              data-error="false"
              id="_r_1r_"
              max="10"
              min="0"
              name="test"
              step="1"
              style="--uv_12tz9gc2: calc(0% - 0px); --uv_12tz9gc1: #ffffff; background-size: 0% 100%;"
              tabindex="0"
              type="range"
              value="0"
            />
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
